--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/f8112dc1f2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <title>My Portfolio</title>
@@ -18,5 +22,15 @@
       <i class="fas fa-bars"></i>
     </nav>
   </header>
+  <main>
+    <div class="hero">
+      <h1>Kehinde Audu</h1>
+      <p class="tag">Software Developer</p>
+      <p class="decription">
+        I can help you build a product , feature or website Look through some of my work and experience! If you like 
+        what you see and have a project you need coded,  don’t hestiate to contact me.
+      </p>
+    </div>
+  </main>
 </body>
 </html>
