--- a/index.html
+++ b/index.html
@@ -30,7 +30,37 @@
         I can help you build a product , feature or website Look through some of my work and experience! If you like 
         what you see and have a project you need coded,  don’t hestiate to contact me.
       </p>
-      
+      <div class="abilities">
+        <div class="languages wrap">
+          <p>Languages</p>
+          <ul>
+            <li>JavaScript</li>
+            <li>Ruby</li>
+            <li>Html</li>
+            <li>CSS</li>
+          </ul>
+        </div>
+        <div class="Frameworks wrap">
+          <p>Frameworks</p>
+          <ul>
+            <li>Bootstrap</li>
+            <li>Ruby on Rails</li>
+            <li>RSPec</li>
+            <li>CapyBara</li>
+            <li>Selenium</li>
+          </ul>
+        </div>
+        <div class="skills wrap">
+          <p>Skills</p>
+          <ul>
+            <li>Codekit</li>
+            <li>GitHub</li>
+            <li>Codepen</li>
+            <li>Gitlab</li>
+            <li>Terminal</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </main>
 </body>
