--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li>CSS</li>
           </ul>
         </div>
-        <div class="Frameworks wrap">
+        <div class="frameworks wrap">
           <p>Frameworks</p>
           <ul>
             <li>Bootstrap</li>
@@ -61,6 +61,15 @@
           </ul>
         </div>
       </div>
+    </div>
+    <div>
+      <img class="elipse" src="img/elipse.svg.svg" alt="">
+    </div>
+    <div class="socials">
+      <i class="fab fa-github"></i>
+      <i class="fab fa-linkedin-in"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-medium-m"></i>
     </div>
   </main>
 </body>
