Add the arrow key

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
       <i class="fab fa-twitter"></i>
       <i class="fab fa-medium-m"></i>
     </div>
+    <div class="point-down">
+      <i class="fas fa-arrow-down"></i>
+      <p class="work">work</p>
+    </div>
   </main>
 </body>
 </html>
