Refactor linters file setup

--- a/index.html
+++ b/index.html
@@ -4,26 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/f8112dc1f2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <title>My Portfolio</title>
 </head>
 <body>
   <header>
+    <a class="wrap logo" href="#">Kehinde Audu</a>
     <nav>
-      <a class="wrap logo" href="#">Kehinde Audu</a>
       <i class="fas fa-bars"></i>
     </nav>
   </header>
   <main>
-    <div class="hero">
+    <section class="hero">
       <h1>Kehinde Audu</h1>
       <p class="tag">Software Developer</p>
       <p class="decription">
@@ -61,15 +54,14 @@
           </ul>
         </div>
       </div>
-    </div>
-    <div>
-      <img class="elipse" src="img/elipse.svg.svg" alt="">
-    </div>
+    </section>
     <div class="socials">
-      <i class="fab fa-github"></i>
-      <i class="fab fa-linkedin-in"></i>
-      <i class="fab fa-twitter"></i>
-      <i class="fab fa-medium-m"></i>
+      <ul>
+        <li><a href="#"><i class="fab fa-github"></i></a></li>
+        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fab fa-medium-m"></i></a></li>
+      </ul>
     </div>
     <div class="point-down">
       <i class="fas fa-arrow-down"></i>
