Add work section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
       <i class="fas fa-arrow-down"></i>
       <p class="work">work</p>
     </div>
+    <section class="recent-work">
+      <h1>MY RECENT WORK</h1>
+    </section>
   </main>
 </body>
 </html>
