--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
     </div>
     <section class="recent-work">
       <h1>MY RECENT WORK</h1>
+      <div class="proof">
+        <img src="img/fola.PNG" alt="">
+        <h2>MARKETING AGENCY</h2>
+        <p>A website created for a digital marketing agency to help improve sales and give information about company's 
+          product. This website also helps the client to contact the company for a business deal and showcases the company's 
+          different services and packages. 
+        </p>
+      </div>
     </section>
   </main>
 </body>
