Refactor google fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/f8112dc1f2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
   <title>My Portfolio</title>
 </head>
 <body>
@@ -18,7 +21,7 @@
   <main>
     <section class="hero">
       <h1>Kehinde Audu</h1>
-      <p class="tag">Software Developer</p>
+      <h2 class="tag">Software Developer</h2>
       <p class="decription">
         I can help you build a product , feature or website Look through some of my work and experience! If you like 
         what you see and have a project you need coded,  don’t hestiate to contact me.
@@ -76,6 +79,9 @@
           product. This website also helps the client to contact the company for a business deal and showcases the company's 
           different services and packages. 
         </p>
+        <div class="tools">
+          
+        </div>
       </div>
     </section>
   </main>
