Add  project link, project description

--- a/index.html
+++ b/index.html
@@ -73,15 +73,21 @@
     <section class="recent-work">
       <h1>MY RECENT WORK</h1>
       <div class="proof">
-        <img src="img/fola.PNG" alt="">
+        <img class="project-img" src="img/fola2.PNG" alt="Project 1">
         <h2>MARKETING AGENCY</h2>
         <p>A website created for a digital marketing agency to help improve sales and give information about company's 
           product. This website also helps the client to contact the company for a business deal and showcases the company's 
           different services and packages. 
         </p>
         <div class="tools">
-          
+          <ul>
+            <li class="line">CSS</li>
+            <li class="line">html</li>
+            <li class="line">Bootstrap</li>
+            <li>Ruby</li>
+          </ul>
         </div>
+        <a class="project-link" href="https://www.folaajileye.com/">See Project</a>
       </div>
     </section>
   </main>
