--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <section class="recent-work">
       <h1>MY RECENT WORK</h1>
-      <div class="proof">
+      <div class="proof proof-space">
         <img class="project-img" src="img/fola2.PNG" alt="Project 1">
         <h2>MARKETING AGENCY</h2>
         <p>A website created for a digital marketing agency to help improve sales and give information about company's 
@@ -88,6 +88,57 @@
           </ul>
         </div>
         <a class="project-link" href="https://www.folaajileye.com/">See Project</a>
+      </div>
+      <div class="proof proof-space">
+        <img class="project-img" src="img/fola3.PNG" alt="Project 1">
+        <h2>YOU NEED SOLAR</h2>
+        <p>A website created for a digital marketing agency to help improve sales and give information about company's 
+          product. This website also helps the client to contact the company for a business deal and showcases the company's 
+          different services and packages. 
+        </p>
+        <div class="tools">
+          <ul>
+            <li class="line">CSS</li>
+            <li class="line">html</li>
+            <li class="line">Bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <a class="project-link" href="http://youneedsolar.com/">See Project</a>
+      </div>
+      <div class="proof proof-space">
+        <img class="project-img" src="img/fola3.PNG" alt="Project 1">
+        <h2>YOU NEED SOLAR</h2>
+        <p>A website created for a digital marketing agency to help improve sales and give information about company's 
+          product. This website also helps the client to contact the company for a business deal and showcases the company's 
+          different services and packages. 
+        </p>
+        <div class="tools">
+          <ul>
+            <li class="line">CSS</li>
+            <li class="line">html</li>
+            <li class="line">Bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <a class="project-link" href="http://youneedsolar.com/">See Project</a>
+      </div>
+      <div class="proof proof-space">
+        <img class="project-img" src="img/spike.PNG" alt="Project 1">
+        <h2>SPIKE SECURITIES</h2>
+        <p>A website created for a digital marketing agency to help improve sales and give information about company's 
+          product. This website also helps the client to contact the company for a business deal and showcases the company's 
+          different services and packages. 
+        </p>
+        <div class="tools">
+          <ul>
+            <li class="line">CSS</li>
+            <li class="line">html</li>
+            <li class="line">Bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <a class="project-link" href="https://spikesecurities.com/">See Project</a>
       </div>
     </section>
   </main>
