Add more background images to the project

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </p>
         <div class="abilities">
           <div class="languages wrap">
+            <div class="inclu"></div>
             <p>Languages</p>
             <ul>
               <li>JavaScript</li>
@@ -71,7 +72,7 @@
         <p class="work">work</p>
       </div>
       <section class="recent-work">
-        <h1>MY RECENT WORK</h1>
+        <h1 class="recent">MY RECENT WORK</h1>
         <div class="proof proof-space">
           <img class="project-img" src="img/fola2.PNG" alt="Project 1">
           <h2>MARKETING AGENCY</h2>
