--- a/index.html
+++ b/index.html
@@ -143,5 +143,28 @@
         </div>
       </section>
     </main>
+    <form action="">
+      <ul class="input-form">
+        <li>
+          <input
+            type="text"
+            required
+            placeholder="Full name"
+            maxlength="30"
+            name="name"
+          />
+        </li>
+        <li>
+          <input
+            type="email"
+            required
+            placeholder="Email address"
+            name="email"
+          />
+        </li>
+  
+      </ul>
+
+    </form>
 </body>
 </html>
