Add textarea and button

--- a/index.html
+++ b/index.html
@@ -162,6 +162,17 @@
             name="email"
           />
         </li>
+        <li>
+          <textarea
+          maxlength="500"
+          placeholder="Enter text here"
+          required
+          name="text"
+        ></textarea>
+        </li>
+        <li>
+          <button type="submit" class="get-touch">Submit</button>
+        </li>
   
       </ul>
 
