Add button interaction

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <li><input type="text" required placeholder="Full name" maxlength="30" name="name"/></li>
             <li><input type="email" required placeholder="Email address" name="email"/></li>
             <li><textarea maxlength="500" placeholder="Enter text here" required name="text"></textarea></li>
-            <li><button type="submit" class="get-touch btn-submit">Submit</button></li>
+            <li><button type="submit" class="get-touch btn-submit project-link">Submit</button></li>
           </ul> 
         </form>
     </section>
