Add media query for navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <header>
       <a class="wrap logo" href="#">Kehinde Audu</a>
       <nav>
+        <ul class="menus">
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
         <i class="fas fa-bars"></i>
+        <i class="far fa-envelope"></i>
       </nav>
     </header>
     <main>
@@ -28,7 +34,6 @@
         </p>
         <div class="abilities">
           <div class="languages wrap">
-            <div class="inclu"></div>
             <p>Languages</p>
             <ul>
               <li>JavaScript</li>
