--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           I can help you build a product , feature or website Look through some of my work and experience! If you like 
           what you see and have a project you need coded,  don’t hestiate to contact me.
         </p>
+        <img src="img/Vector 4.png" alt="LIne" class="line-divider">
         <div class="abilities">
           <div class="languages wrap">
             <p>Languages</p>
@@ -63,6 +64,7 @@
             </ul>
           </div>
         </div>
+        <img src="img/Vector 4.png" alt="LIne" class="line-divider">
       </section>
       <div class="socials">
         <ul>
@@ -78,6 +80,7 @@
       </div>
       <section class="recent-work">
         <h1 class="recent">MY RECENT WORK</h1>
+        <img src="img/Vector 4.png" alt="LIne" class="line-divider">
         <div class="proof proof-space">
           <img class="project-img" src="img/fola2.PNG" alt="Project 1">
           <h2>MARKETING AGENCY</h2>
