Fix mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="img/Vector 4.png" alt="LIne" class="line-divider">
         <div class="abilities">
           <div class="languages wrap">
-            <p>Languages</p>
+            <p class="title">Languages</p>
             <ul>
               <li>JavaScript</li>
               <li>Ruby</li>
@@ -44,7 +44,7 @@
             </ul>
           </div>
           <div class="frameworks wrap">
-            <p>Frameworks</p>
+            <p class="title">Frameworks</p>
             <ul>
               <li>Bootstrap</li>
               <li>Ruby on Rails</li>
@@ -54,7 +54,7 @@
             </ul>
           </div>
           <div class="skills wrap">
-            <p>Skills</p>
+            <p class="title">Skills</p>
             <ul>
               <li>Codekit</li>
               <li>GitHub</li>
@@ -67,20 +67,26 @@
         <img src="img/Vector 4.png" alt="LIne" class="line-divider">
       </section>
       <div class="socials">
+        <div class="point-down first-social">
+          <i class="fas fa-arrow-down"></i>
+          <p class="work">work</p>
+        </div>
+
         <ul>
           <li><a href="#"><i class="fab fa-github"></i></a></li>
           <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
           <li><a href="#"><i class="fab fa-twitter"></i></a></li>
           <li><a href="#"><i class="fab fa-medium-m"></i></a></li>
         </ul>
-      </div>
-      <div class="point-down">
-        <i class="fas fa-arrow-down"></i>
-        <p class="work">work</p>
+      
+        <div class="point-down">
+          <i class="fas fa-arrow-down"></i>
+          <p class="work">work</p>
+        </div>
       </div>
       <section class="recent-work">
         <h1 class="recent">MY RECENT WORK</h1>
-        <img src="img/Vector 4.png" alt="LIne" class="line-divider">
+        <img src="img/Vector 4.png" alt="LIne" class="line-divider2">
         <div class="proof proof-space">
           <img class="project-img" src="img/fola2.PNG" alt="Project 1">
           <h2>MARKETING AGENCY</h2>
