--- a/index.html
+++ b/index.html
@@ -89,71 +89,79 @@
         <img src="img/Vector 4.png" alt="LIne" class="line-divider2">
         <div class="proof proof-space">
           <img class="project-img" src="img/fola2.PNG" alt="Project 1">
-          <h2>MARKETING AGENCY</h2>
-          <p>A website created for a digital marketing agency to help improve sales and give information about company's 
-            product. This website also helps the client to contact the company for a business deal and showcases the company's 
-            different services and packages. 
-          </p>
-          <div class="tools">
-            <ul>
-              <li class="line">CSS</li>
-              <li class="line">html</li>
-              <li class="line">Bootstrap</li>
-              <li>Ruby</li>
-            </ul>
+          <div class="inner-element">
+            <h2>MARKETING AGENCY</h2>
+            <p>A website created for a digital marketing agency to help improve sales and give information about company's 
+              product. This website also helps the client to contact the company for a business deal and showcases the company's 
+              different services and packages. 
+            </p>
+            <div class="tools">
+              <ul>
+                <li class="line">CSS</li>
+                <li class="line">html</li>
+                <li class="line">Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <a class="project-link" href="https://www.folaajileye.com/">See Project</a>
           </div>
-          <a class="project-link" href="https://www.folaajileye.com/">See Project</a>
+        </div>
+        <div class="proof proof-space">
+          <div>
+            <h2>YOU NEED SOLAR</h2>
+            <p>A website created for a digital marketing agency to help improve sales and give information about company's 
+              product. This website also helps the client to contact the company for a business deal and showcases the company's 
+              different services and packages. 
+            </p>
+            <div class="tools">
+              <ul>
+                <li class="line">CSS</li>
+                <li class="line">html</li>
+                <li class="line">Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <a class="project-link" href="http://youneedsolar.com/">See Project</a>
+          </div>
+          <img class="project-img" src="img/fola3.PNG" alt="Project 1">
         </div>
         <div class="proof proof-space">
           <img class="project-img" src="img/fola3.PNG" alt="Project 1">
-          <h2>YOU NEED SOLAR</h2>
-          <p>A website created for a digital marketing agency to help improve sales and give information about company's 
-            product. This website also helps the client to contact the company for a business deal and showcases the company's 
-            different services and packages. 
-          </p>
-          <div class="tools">
-            <ul>
-              <li class="line">CSS</li>
-              <li class="line">html</li>
-              <li class="line">Bootstrap</li>
-              <li>Ruby</li>
-            </ul>
+          <div>
+            <h2>YOU NEED SOLAR</h2>
+            <p>A website created for a digital marketing agency to help improve sales and give information about company's 
+              product. This website also helps the client to contact the company for a business deal and showcases the company's 
+              different services and packages. 
+            </p>
+            <div class="tools">
+              <ul>
+                <li class="line">CSS</li>
+                <li class="line">html</li>
+                <li class="line">Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <a class="project-link" href="http://youneedsolar.com/">See Project</a>
           </div>
-          <a class="project-link" href="http://youneedsolar.com/">See Project</a>
         </div>
         <div class="proof proof-space">
-          <img class="project-img" src="img/fola3.PNG" alt="Project 1">
-          <h2>YOU NEED SOLAR</h2>
-          <p>A website created for a digital marketing agency to help improve sales and give information about company's 
-            product. This website also helps the client to contact the company for a business deal and showcases the company's 
-            different services and packages. 
-          </p>
-          <div class="tools">
-            <ul>
-              <li class="line">CSS</li>
-              <li class="line">html</li>
-              <li class="line">Bootstrap</li>
-              <li>Ruby</li>
-            </ul>
+          <div>
+            <h2>SPIKE SECURITIES</h2>
+              <p>A website created for a digital marketing agency to help improve sales and give information about company's 
+                product. This website also helps the client to contact the company for a business deal and showcases the company's 
+                different services and packages. 
+              </p>
+              <div class="tools">
+                <ul>
+                  <li class="line">CSS</li>
+                  <li class="line">html</li>
+                  <li class="line">Bootstrap</li>
+                  <li>Ruby</li>
+                </ul>
+              </div>
+              <a class="project-link" href="https://spikesecurities.com/">See Project</a>
           </div>
-          <a class="project-link" href="http://youneedsolar.com/">See Project</a>
-        </div>
-        <div class="proof proof-space">
           <img class="project-img" src="img/spike.PNG" alt="Project 1">
-          <h2>SPIKE SECURITIES</h2>
-          <p>A website created for a digital marketing agency to help improve sales and give information about company's 
-            product. This website also helps the client to contact the company for a business deal and showcases the company's 
-            different services and packages. 
-          </p>
-          <div class="tools">
-            <ul>
-              <li class="line">CSS</li>
-              <li class="line">html</li>
-              <li class="line">Bootstrap</li>
-              <li>Ruby</li>
-            </ul>
-          </div>
-          <a class="project-link" href="https://spikesecurities.com/">See Project</a>
         </div>
       </section>
       <section class="form-section">
