Add media query to the recent work section

--- a/index.html
+++ b/index.html
@@ -106,27 +106,8 @@
             <a class="project-link" href="https://www.folaajileye.com/">See Project</a>
           </div>
         </div>
-        <div class="proof proof-space">
-          <div>
-            <h2>YOU NEED SOLAR</h2>
-            <p>A website created for a digital marketing agency to help improve sales and give information about company's 
-              product. This website also helps the client to contact the company for a business deal and showcases the company's 
-              different services and packages. 
-            </p>
-            <div class="tools">
-              <ul>
-                <li class="line">CSS</li>
-                <li class="line">html</li>
-                <li class="line">Bootstrap</li>
-                <li>Ruby</li>
-              </ul>
-            </div>
-            <a class="project-link" href="http://youneedsolar.com/">See Project</a>
-          </div>
-          <img class="project-img" src="img/fola3.PNG" alt="Project 1">
-        </div>
-        <div class="proof proof-space">
-          <img class="project-img" src="img/fola3.PNG" alt="Project 1">
+        <div class="proof proof-space grid-version">
+          <img class="project-img item1" src="img/fola3.PNG" alt="Project 1">
           <div>
             <h2>YOU NEED SOLAR</h2>
             <p>A website created for a digital marketing agency to help improve sales and give information about company's 
@@ -144,7 +125,28 @@
             <a class="project-link" href="http://youneedsolar.com/">See Project</a>
           </div>
         </div>
+        <div class="proof proof-space grid-version item2">
+          <img class="project-img" src="img/fola3.PNG" alt="Project 1">
+          <div>
+            <h2>YOU NEED SOLAR</h2>
+            <p>A website created for a digital marketing agency to help improve sales and give information about company's 
+              product. This website also helps the client to contact the company for a business deal and showcases the company's 
+              different services and packages. 
+            </p>
+            <div class="tools">
+              <ul>
+                <li class="line">CSS</li>
+                <li class="line">html</li>
+                <li class="line">Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <a class="project-link" href="http://youneedsolar.com/">See Project</a>
+          </div>
+        </div>
+        
         <div class="proof proof-space">
+          <img class="project-img item1" src="img/spike.PNG" alt="Project 1">
           <div>
             <h2>SPIKE SECURITIES</h2>
               <p>A website created for a digital marketing agency to help improve sales and give information about company's 
@@ -161,7 +163,6 @@
               </div>
               <a class="project-link" href="https://spikesecurities.com/">See Project</a>
           </div>
-          <img class="project-img" src="img/spike.PNG" alt="Project 1">
         </div>
       </section>
       <section class="form-section">
@@ -179,7 +180,7 @@
     </section>
     </main>
     <footer>
-      <div class="socials footer-socials">
+      <div class="footer-socials">
         <ul>
           <li><a href="#"><i class="fab fa-github"></i></a></li>
           <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
