Fix form position for mobile version

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="languages wrap">
             <p class="title">Languages</p>
             <ul>
-              <li>JavaScript</li>
+              <li class="btw-space">JavaScript</li>
               <li>Ruby</li>
               <li>Html</li>
               <li>CSS</li>
