Fix social section width

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         <div class="proof proof-space grid-version">
           <img class="project-img item1" src="img/fola3.PNG" alt="Project 1">
-          <div>
+          <div class="inner-element">
             <h2>YOU NEED SOLAR</h2>
             <p>A website created for a digital marketing agency to help improve sales and give information about company's 
               product. This website also helps the client to contact the company for a business deal and showcases the company's 
@@ -125,9 +125,9 @@
             <a class="project-link" href="http://youneedsolar.com/">See Project</a>
           </div>
         </div>
-        <div class="proof proof-space grid-version item2">
+        <div class="proof proof-space item2">
           <img class="project-img" src="img/fola3.PNG" alt="Project 1">
-          <div>
+          <div class="inner-element">
             <h2>YOU NEED SOLAR</h2>
             <p>A website created for a digital marketing agency to help improve sales and give information about company's 
               product. This website also helps the client to contact the company for a business deal and showcases the company's 
@@ -144,10 +144,9 @@
             <a class="project-link" href="http://youneedsolar.com/">See Project</a>
           </div>
         </div>
-        
         <div class="proof proof-space">
           <img class="project-img item1" src="img/spike.PNG" alt="Project 1">
-          <div>
+          <div class="inner-element">
             <h2>SPIKE SECURITIES</h2>
               <p>A website created for a digital marketing agency to help improve sales and give information about company's 
                 product. This website also helps the client to contact the company for a business deal and showcases the company's 
