--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           project that needs coding. I’d love to help with it</p>
         <form action="https://formspree.io/f/xayavlkq" method="POST">
           <ul class="input-form">
-            <li><input type="text" required placeholder="Full name" aria-labelledby="full-name" maxlength="30" name="name"/></li>
+            <li><input type="text" required placeholder="Full name" aria-labelledby="name" maxlength="30" name="name"/></li>
             <li><input type="email" required placeholder="Email address" aria-labelledby="email" name="email"/></li>
             <li><textarea maxlength="500" placeholder="Enter text here" aria-labelledby="message" name="message" required name="text"></textarea></li>
             <li><button type="submit" class="get-touch btn-submit project-link" aria-labelledby="form-submit">Submit</button></li>
