--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
       <a class="wrap logo" href="#">Kehinde Audu</a>
       <nav>
         <ul class="menus">
+          <a href="#"><img src="img/Union.png" alt="humberger-button" id="menu-icon" width="5"  onclick="showMenu()">
           <li><a href="#recent">Portfolio</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-        <i class="fas fa-bars" id="icon" onclick="showMenu()"></i><i class="fas fa-times"></i>
-        <i class="far fa-envelope"></i>
+        <!-- <i class="fas fa-bars" id="icon" onclick="showMenu()"></i><i class="fas fa-times"></i> -->
+         <a href="#"><img src="img/Union.png" alt="humberger-button" id="icon" width="5"  onclick="showMenu()">
+         <i class="far fa-envelope"></i>
       </nav>
 
     </header>
