fix nav position

--- a/index.html
+++ b/index.html
@@ -11,9 +11,28 @@
 <body>
   <header>
     <a class="wrap logo" href="#">Kehinde Audu</a>
-    <nav>
-      <i class="fas fa-bars"></i>
-    </nav>
+    <nav class="navbar d-flex">
+      <i class="fas fa-bars iconz"></i>
+          <ul class="nav-menu poppins">
+          <li class="nav-item">
+              <a href="#" class="nav-link">Hello</a>
+          </li>
+          <li class="nav-item">
+              <a href="#" class="nav-link">Portfolio</a>
+          </li>
+          <li class="nav-item">
+              <a href="#" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+          </li>
+      </ul>
+      <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+      </div>
+  </nav>
   </header>
   <main>
     <section class="hero">
@@ -68,5 +87,6 @@
       <p class="work">work</p>
     </div>
   </main>
+  <script src="main.js"></script>
 </body>
 </html>
