Add arrows to the mobile menu

--- a/index.html
+++ b/index.html
@@ -30,19 +30,20 @@
         <ul class="nav-menu">
           <li class="nav-item">
               <a href="#portfolio" class="nav-link">Portfolio</a>
+              <i class="fas fa-chevron-right"></i>
           </li>
           <li class="nav-item">
               <a href="#about" class="nav-link">About</a>
+              <i class="fas fa-chevron-right"></i>
           </li>
           <li class="nav-item">
               <a href="#contact" class="nav-link">Contact</a>
+              <i class="fas fa-chevron-right"></i>
           </li>
         </ul>
-      <div class="hamburger wrap">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-      </div>
+        <div class="hamburger wrap">
+          <i class="fas fa-bars"></i>
+        </div>
     </nav>
   </header>
     <main>
