--- a/index.html
+++ b/index.html
@@ -1,60 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://kit.fontawesome.com/f8112dc1f2.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
-  <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script> -->
-  
-  <title>My Portfolio</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/f8112dc1f2.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script> -->
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EP43G5K157"></script>  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    <title>My Portfolio</title>
 
-    gtag('config', 'G-EP43G5K157');
-  </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-EP43G5K157"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-</head>
-<body>
-  <header class="header">
-    <nav class="navbar d-flex">
+      gtag('config', 'G-EP43G5K157');
+    </script>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="navbar d-flex">
         <a class="wrap logo" href="#">Kehinde Audu</a>
         <ul class="nav-menu">
           <li class="nav-item">
-              <a href="#portfolio" class="nav-link">Portfolio</a>
-              <i class="fas fa-chevron-right"></i>
+            <a href="#portfolio" class="nav-link">Portfolio</a>
+            <i class="fas fa-chevron-right"></i>
           </li>
           <li class="nav-item">
-              <a href="#about" class="nav-link">About</a>
-              <i class="fas fa-chevron-right"></i>
+            <a href="#about" class="nav-link">About</a>
+            <i class="fas fa-chevron-right"></i>
           </li>
           <li class="nav-item">
-              <a href="#contact" class="nav-link">Contact</a>
-              <i class="fas fa-chevron-right"></i>
+            <a href="#contact" class="nav-link">Contact</a>
+            <i class="fas fa-chevron-right"></i>
           </li>
         </ul>
         <div class="hamburger wrap">
           <i class="fas fa-bars"></i>
+          <!-- <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span> -->
         </div>
-    </nav>
-  </header>
+        <div class="close">&times;</div>
+      </nav>
+    </header>
     <main>
       <section class="hero" id="about">
         <h1>Kehinde Audu</h1>
         <h2 class="tag">Software Developer</h2>
         <p class="decription">
-          I can help you build a product , feature or website Look through some of my work and experience! If you like 
-          what you see and have a project you need coded,  don’t hestiate to contact me.
+          I can help you build a product , feature or website Look through some
+          of my work and experience! If you like what you see and have a project
+          you need coded, don’t hestiate to contact me.
         </p>
-        <img src="img/Vector4.png" alt="LIne" class="line-divider">
+        <img src="img/Vector4.png" alt="LIne" class="line-divider" />
         <div class="abilities">
           <div class="languages wrap">
             <p class="title">Languages</p>
@@ -86,7 +102,7 @@
             </ul>
           </div>
         </div>
-        <img src="img/Vector4.png" alt="LIne" class="line-divider">
+        <img src="img/Vector4.png" alt="LIne" class="line-divider" />
       </section>
       <div class="socials">
         <div class="point-down first-social">
@@ -95,12 +111,20 @@
         </div>
 
         <ul>
-          <li><a href="#"><i class="fab fa-github"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-medium-m"></i></a></li>
+          <li>
+            <a href="#"><i class="fab fa-github"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-medium-m"></i></a>
+          </li>
         </ul>
-      
+
         <div class="point-down">
           <i class="fas fa-arrow-down"></i>
           <p class="work">work</p>
@@ -108,14 +132,16 @@
       </div>
       <section class="recent-work" id="portfolio">
         <h2 class="recent">MY RECENT WORK</h2>
-        <img src="img/Vector4.png" alt="LIne" class="line-divider2">
+        <img src="img/Vector4.png" alt="LIne" class="line-divider2" />
         <div class="proof proof-space">
-          <img class="project-img" src="img/fola2.PNG" alt="Project 1">
+          <img class="project-img" src="img/fola2.PNG" alt="Project 1" />
           <div class="inner-element">
             <h3>MARKETING AGENCY</h3>
-            <p>A website created for a digital marketing agency to help improve sales and give information about company's 
-              product. This website also helps the client to contact the company for a business deal and showcases the company's 
-              different services and packages. 
+            <p>
+              A website created for a digital marketing agency to help improve
+              sales and give information about company's product. This website
+              also helps the client to contact the company for a business deal
+              and showcases the company's different services and packages.
             </p>
             <div class="tools">
               <ul>
@@ -125,16 +151,20 @@
                 <li>Ruby</li>
               </ul>
             </div>
-            <a class="project-link" href="https://www.folaajileye.com/">See Project</a>
+            <a class="project-link" href="https://www.folaajileye.com/"
+              >See Project</a
+            >
           </div>
         </div>
         <div class="proof proof-space grid-version">
-          <img class="project-img item1" src="img/fola3.PNG" alt="Project 2">
+          <img class="project-img item1" src="img/fola3.PNG" alt="Project 2" />
           <div class="inner-element">
             <h3>YOU NEED SOLAR</h3>
-            <p>A website created for a digital marketing agency to help improve sales and give information about company's 
-              product. This website also helps the client to contact the company for a business deal and showcases the company's 
-              different services and packages. 
+            <p>
+              A website created for a digital marketing agency to help improve
+              sales and give information about company's product. This website
+              also helps the client to contact the company for a business deal
+              and showcases the company's different services and packages.
             </p>
             <div class="tools">
               <ul>
@@ -144,16 +174,20 @@
                 <li>Ruby</li>
               </ul>
             </div>
-            <a class="project-link" href="http://youneedsolar.com/">See Project</a>
+            <a class="project-link" href="http://youneedsolar.com/"
+              >See Project</a
+            >
           </div>
         </div>
         <div class="proof proof-space item2">
-          <img class="project-img" src="img/fola3.PNG" alt="Project 3">
+          <img class="project-img" src="img/fola3.PNG" alt="Project 3" />
           <div class="inner-element">
             <h3>YOU NEED SOLAR</h3>
-            <p>A website created for a digital marketing agency to help improve sales and give information about company's 
-              product. This website also helps the client to contact the company for a business deal and showcases the company's 
-              different services and packages. 
+            <p>
+              A website created for a digital marketing agency to help improve
+              sales and give information about company's product. This website
+              also helps the client to contact the company for a business deal
+              and showcases the company's different services and packages.
             </p>
             <div class="tools">
               <ul>
@@ -163,55 +197,98 @@
                 <li>Ruby</li>
               </ul>
             </div>
-            <a class="project-link" href="http://youneedsolar.com/">See Project</a>
+            <a class="project-link" href="http://youneedsolar.com/"
+              >See Project</a
+            >
           </div>
         </div>
         <div class="proof proof-space">
-          <img class="project-img item1" src="img/spike.PNG" alt="Project 4">
+          <img class="project-img item1" src="img/spike.PNG" alt="Project 4" />
           <div class="inner-element">
             <h3>SPIKE SECURITIES</h3>
-              <p>A website created for a digital marketing agency to help improve sales and give information about company's 
-                product. This website also helps the client to contact the company for a business deal and showcases the company's 
-                different services and packages. 
-              </p>
-              <div class="tools">
-                <ul>
-                  <li class="line">CSS</li>
-                  <li class="line">html</li>
-                  <li class="line">Bootstrap</li>
-                  <li>Ruby</li>
-                </ul>
-              </div>
-              <a class="project-link" href="https://spikesecurities.com/">See Project</a>
+            <p>
+              A website created for a digital marketing agency to help improve
+              sales and give information about company's product. This website
+              also helps the client to contact the company for a business deal
+              and showcases the company's different services and packages.
+            </p>
+            <div class="tools">
+              <ul>
+                <li class="line">CSS</li>
+                <li class="line">html</li>
+                <li class="line">Bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <a class="project-link" href="https://spikesecurities.com/"
+              >See Project</a
+            >
           </div>
         </div>
       </section>
       <section class="form-section" id="contact">
         <h3>CONTACT US</h3>
-        <p>If you have an application you are interested in developing, a feature that you need built or a 
-          project that needs coding. I’d love to help with it</p>
+        <p>
+          If you have an application you are interested in developing, a feature
+          that you need built or a project that needs coding. I’d love to help
+          with it
+        </p>
         <form action="https://formspree.io/f/xayavlkq" method="POST">
           <ul class="input-form">
-            <li><input type="text" required placeholder="Full name" maxlength="30" name="name"/></li>
-            <li><input type="email" required placeholder="Email address" name="email"/></li>
-            <li><textarea maxlength="500" placeholder="Enter text here" name="message" required></textarea></li>
-            <li><button type="submit" class="get-touch btn-submit project-link">Submit</button></li>
-          </ul> 
+            <li>
+              <input
+                type="text"
+                required
+                placeholder="Full name"
+                maxlength="30"
+                name="name"
+              />
+            </li>
+            <li>
+              <input
+                type="email"
+                required
+                placeholder="Email address"
+                name="email"
+              />
+            </li>
+            <li>
+              <textarea
+                maxlength="500"
+                placeholder="Enter text here"
+                name="message"
+                required
+              ></textarea>
+            </li>
+            <li>
+              <button type="submit" class="get-touch btn-submit project-link">
+                Submit
+              </button>
+            </li>
+          </ul>
         </form>
-    </section>
+      </section>
     </main>
     <footer>
       <div class="footer-socials">
         <ul>
-          <li><a href="#"><i class="fab fa-github"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-medium-m"></i></a></li>
+          <li>
+            <a href="#"><i class="fab fa-github"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-medium-m"></i></a>
+          </li>
         </ul>
       </div>
       <p>auduomohkehinde@gmail.com</p>
-    </footer>   
-    
+    </footer>
+
     <script src="main.js"></script>
   </body>
 </html>
