Implement required changes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="hamburger wrap">
           <i class="fas fa-bars"></i>
         </div>
-        <div class="close">&times;</div>
+        <div class="close" id="close">&times;</div>
       </nav>
     </header>
     <main>
