Add padding to input form

--- a/index.html
+++ b/index.html
@@ -148,9 +148,8 @@
                 <li>Ruby</li>
               </ul>
             </div>
-            <a class="project-link" href="https://www.folaajileye.com/"
-              >See Project</a
-            >
+            <button class="project-link btnsee">See Project</button>
+            <!-- <a class="project-link btnsee" href="https://www.folaajileye.com/">See Project</a> -->
           </div>
         </div>
         <div class="proof proof-space grid-version">
@@ -171,9 +170,8 @@
                 <li>Ruby</li>
               </ul>
             </div>
-            <a class="project-link" href="http://youneedsolar.com/"
-              >See Project</a
-            >
+            <button class="project-link btnsee">See Project</button>
+            <!-- <a class="project-link" href="http://youneedsolar.com/">See Project</a> -->
           </div>
         </div>
         <div class="proof proof-space item2">
@@ -194,9 +192,8 @@
                 <li>Ruby</li>
               </ul>
             </div>
-            <a class="project-link" href="http://youneedsolar.com/"
-              >See Project</a
-            >
+            <button class="project-link btnsee">See Project</button>
+            <!-- <a class="project-link" href="http://youneedsolar.com/">See Project</a> -->
           </div>
         </div>
         <div class="proof proof-space">
@@ -217,9 +214,8 @@
                 <li>Ruby</li>
               </ul>
             </div>
-            <a class="project-link" href="https://spikesecurities.com/"
-              >See Project</a
-            >
+            <button class="project-link btnsee">See Project</button>
+            <!-- <a class="project-link" href="https://spikesecurities.com/">See Project</a> -->
           </div>
         </div>
       </section>
