Increase form width

--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/f8112dc1f2.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap"
-      rel="stylesheet"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script src="https://kit.fontawesome.com/f8112dc1f2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet"/>
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script> -->
 
     <title>My Portfolio</title>
@@ -228,36 +222,10 @@
         </p>
         <form action="https://formspree.io/f/xayavlkq" method="POST">
           <ul class="input-form">
-            <li>
-              <input
-                type="text"
-                required
-                placeholder="Full name"
-                maxlength="30"
-                name="name"
-              />
-            </li>
-            <li>
-              <input
-                type="email"
-                required
-                placeholder="Email address"
-                name="email"
-              />
-            </li>
-            <li>
-              <textarea
-                maxlength="500"
-                placeholder="Enter text here"
-                name="message"
-                required
-              ></textarea>
-            </li>
-            <li>
-              <button type="submit" class="get-touch btn-submit project-link">
-                Submit
-              </button>
-            </li>
+            <li><input type="text" required placeholder="Full name" maxlength="30" name="name"/></li>
+            <li><input type="email" required placeholder="Email address" name="email"/></li>
+            <li><textarea maxlength="500" placeholder="Enter text here" name="message" required></textarea></li>
+            <li><button type="submit" class="get-touch btn-submit project-link">Submit</button></li>
           </ul>
         </form>
       </section>
