Fix linters errors

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <li><input type="text" required placeholder="Full name" maxlength="30" name="name"/></li>
             <li><input type="email" placeholder="Email address" id="my-email" name="email"/></li>
             <li><textarea maxlength="500" placeholder="Enter text here" name="message" required></textarea></li>
-            <P class="error-Message error-msg"></P>
+            <li><P class="error-Message error-msg"></P></li>
             <li><button type="submit" class="get-touch btn-submit project-link" id="btn-submit">Submit</button></li>
           </ul>
         </form>
