Save form content to local storage

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
         </p>
         <form action="https://formspree.io/f/xayavlkq" method="POST" id="form">
           <ul class="input-form">
-            <li><input type="text" required placeholder="Full name" maxlength="30" name="name"/></li>
-            <li><input type="email" placeholder="Email address" id="my-email" name="email"/></li>
-            <li><textarea maxlength="500" placeholder="Enter text here" name="message" required></textarea></li>
+            <li><input type="text" id="full-name" required placeholder="Full name" maxlength="30" name="name"/></li>
+            <li><input type="email"  placeholder="Email address" id="my-email" name="email"/></li>
+            <li><textarea maxlength="500" id="my-message" placeholder="Enter text here" name="message" required></textarea></li>
             <li><P class="error-Message error-msg"></P></li>
             <li><button type="submit" class="get-touch btn-submit project-link" id="btn-submit">Submit</button></li>
           </ul>
