Add Project title and line image using javascript

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
       </div>
       <section class="recent-work" id="portfolio">
-        <h2 class="recent">MY RECENT WORK</h2>
+        <!-- <h2 class="recent">MY RECENT WORK</h2>
         <img src="img/Vector4.png" alt="LIne" class="line-divider2" />
         <div class="proof proof-space">
           <img class="project-img" src="img/fola2.PNG" alt="Project 1" />
@@ -141,7 +141,6 @@
               </ul>
             </div>
             <button class="project-link btnsee">See Project</button>
-            <!-- <a class="project-link btnsee" href="https://www.folaajileye.com/">See Project</a> -->
           </div>
         </div>
         <div class="proof proof-space grid-version">
@@ -163,7 +162,6 @@
               </ul>
             </div>
             <button class="project-link btnsee">See Project</button>
-            <!-- <a class="project-link" href="http://youneedsolar.com/">See Project</a> -->
           </div>
         </div>
         <div class="proof proof-space item2">
@@ -185,7 +183,6 @@
               </ul>
             </div>
             <button class="project-link btnsee">See Project</button>
-            <!-- <a class="project-link" href="http://youneedsolar.com/">See Project</a> -->
           </div>
         </div>
         <div class="proof proof-space">
@@ -207,9 +204,8 @@
               </ul>
             </div>
             <button class="project-link btnsee">See Project</button>
-            <!-- <a class="project-link" href="https://spikesecurities.com/">See Project</a> -->
           </div>
-        </div>
+        </div> -->
       </section>
       <section class="form-section" id="contact">
         <h3>CONTACT US</h3>
