Implement required changes by the last reviwer

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="hamburger wrap">
           <i class="fas fa-bars"></i>
         </div>
+        <!-- <div><img src="img/close2.png" class="close" id="close" alt="Close Button"></div> -->
         <div class="close" id="close">&times;</div>
       </nav>
     </header>
